force-app/main/default/objects/Condiciones_Plan_Empleados__c/Condiciones_Plan_Empleados__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Condiciones Plan Empleados</label>
</CustomObject>