force-app/main/default/objects/Condiciones_Plan_Empleados__c/fields/Porcentaje_de_Garantia_Extendida_PE__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_Garantia_Extendida_PE__c</fullName>
    <label>Porcentaje de Garantia Extendida PE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>