force-app/main/default/objects/Condiciones_Plan_Empleados__c/fields/Seguro_Robo_Plan_Empleado__c.field-meta.xml
<CustomField>
    <fullName>Seguro_Robo_Plan_Empleado__c</fullName>
    <label>% Seguro Robo Plan Empleado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>